orginized main
